adding and editing reviews

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,11 @@
-{{outlet}}
+<div class="container">
+  <header class="jumbotron">
+    <a href="/" class="logo"><h1>Super Rentals</h1></a>
+  </header>
+  {{outlet}}
+  <hr>
+  <footer>
+    {{#link-to 'contact'}}Our representatives would love to help!{{/link-to}}
+  </footer>
+
+</div>
