--- a/app/templates/components/rental-tile.hbs
+++ b/app/templates/components/rental-tile.hbs
@@ -1,9 +1,8 @@
 <li>
-  {{rental.owner}}'s {{rental.type}} in {{rental.city}}
-  {{#if isImageShowing }}
-    <p><img src={{rental.image}} alt={{rental.type}} {{action 'imageHide'}}></p>
+  {{#link-to 'rental' rental.id}}{{rental.owner}}'s {{rental.type}} in {{rental.city}} {{/link-to}}
+  {{#if isImageShowing}}
+    <p><img src={{rental.image}} alt={{rental.type}} {{action 'imageHide'}} class="rental-img"></p>
   {{else}}
-    <button {{action 'imageShow'}}>Show image</button>
+    <button {{action 'imageShow'}}class="btn btn-info">Image</button>
   {{/if}}
-  <button {{action 'delete' rental}}>Delete Rental</button>
 </li>
