--- a/app/templates/components/rental-detail.hbs
+++ b/app/templates/components/rental-detail.hbs
@@ -2,4 +2,11 @@ located in {{rental.city}}, this {{rental.bedrooms}} bedrooms {{rental.type}} is
 <br>
 <p><img src={{rental.image}} alt={{rental.type}} class="rental-img"></p>
 
+<h2> Reviews</h2>
+<ul>
+  {{#each rental.reviews as |review|}}
+    {{review-tile review=review destroyReview="destroyReview"}}
+  {{/each}}
+</ul>
+
 <button type="button" name="button" {{action 'delete' rental}}>Delete</button>
